--- a/_global.css
+++ b/_global.css
@@ -26,6 +26,8 @@ change (#navigator-toolbox) with your top bar (in this case #nav-bar) and use
 /* Change bottom border color */
 #navigator-toolbox {
     border-color: var(--moonlight-gray-1) !important;
+    background-color: var(--moonlight-gray-2) !important;
+    padding: 0 3px 3px 3px !important;
 }
 
 #tabbrowser-tabpanels {
