--- a/_tab-bar.css
+++ b/_tab-bar.css
@@ -8,11 +8,9 @@
     display: none !important;
 }
 
-#navigator-toolbox {
-    background-color: var(--moonlight-gray-2) !important;
-}
 #TabsToolbar {
-    padding: 4px !important;
+    margin-top: -1px !important;
+    padding-bottom: 1px !important;
 }
 
 #toolbar-menubar {
@@ -22,7 +20,7 @@
 .tabbrowser-tab .tab-stack {
     background: var(--moonlight-gray-4) !important;
     border: 1px solid var(--moonlight-gray-1) !important;
-    margin: 2px !important;
+    margin: 2px 4px 2px 2px !important;
     border-radius: 3px !important;
     color: var(--moonlight-gray-10) !important;
     transition: background-color, border-color 300ms cubic-bezier(0.645, 0.045, 0.355, 1) !important;
